[tool.poetry]
name = "chipscopy"
version = "2021.1.1618180560"
description = "Open-source project from Xilinx® that enables high-level control of Versal debug IP running in hardware"
authors = ["Xilinx LabTools <labtools@xilinx.com>"]
maintainers = ["Xilinx LabTools <labtools@xilinx.com>"]
license = "BSD-3-Clause"
repository = "https://gitenterprise.xilinx.com/chipscope/chipscopy"
documentation = "https://pages.gitenterprise.xilinx.com/chipscope/chipscopy/master/html/"

[tool.poetry.dependencies]
python = "^3.7.1"
more-itertools = "^8.2.0"
typing_extensions = "^3.7.4"
loguru = "^0.5.0"
importlib_metadata = "^1.6.1"
rich = "^9.12.4"
Click = "^7.1.2"
kaleido = { version = "^0.0.2", optional = true }
plotly = { version = "^4.9.0", optional = true }
notebook = { version = "^6.0.3", optional = true }
ipywidgets = { version = "^7.5.1", optional = true }
pandas = { version = "^1.2.3", optional = true }
matplotlib = { version = "^3.4.0", optional = true }
PyQt5 = { version = "^5.15.4", optional = true }

[tool.poetry.dev-dependencies]
pyboardbarn = { git = "https://gitenterprise.xilinx.com/chipscope/pyboardbarn" }
black = "^20.8b1"
sphinx = "^3.0.3"
sphinx-rtd-theme = "^0.4.3"
sphinx-autodoc-typehints = "^1.10.3"
pytest = "^6.2.1"
mypy = "^0.770"
coverage = "^5.1"
recommonmark = "^0.6.0"
pre-commit = "^2.7.1"
jupytext = "^1.6.0"
isort = "^5.6.1"
pytest-mock = "^3.5.1"

[tool.poetry.scripts]
chipscopy-get-examples = "chipscopy._cli.example_delivery:main"
chipscopy = "chipscopy._cli._chipscopy:main"

[tool.poetry.urls]
"Bug Tracker" = "https://gitenterprise.xilinx.com/chipscope/chipscopy/issues"

[tool.poetry.extras]
pandas = ["pandas"]
plotly = ["plotly", "kaleido"]
jupyter = ["notebook", "ipywidgets"]
noc = ["matplotlib", "PyQt5"]

[tool.pytest.ini_options]
addopts = "--strict-markers --verbose"
markers = ["board_needed: Use of tests that cannot run without boards"]
testpaths = "tests"

[tool.black]
line-length = 100
target-version = ['py37']
exclude = '''chipscopy/tcf/.*$|docs/.*$'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
