# Copyright 2021 Xilinx, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "chipscopy"
version = "2022.1.1660671586"
description = "Open-source project from Xilinx® that enables high-level control of Versal debug IP running in hardware"
authors = ["Xilinx ChipScope Team"]
maintainers = ["Xilinx ChipScope Team"]
license = "Apache-2.0 AND EPL-2.0"
repository = "https://github.com/Xilinx/chipscopy"
documentation = "https://xilinx.github.io/chipscopy/master/html/"
readme = "README.md"
include = ["LICENSE", "epl-v20.html"]

[tool.poetry.dependencies]
python = "^3.7.1"
more-itertools = "^8.2.0"
typing_extensions = "^3.7.4"
loguru = "^0.5.0"
importlib_metadata = "^4.4"
rich = "^9.12.4"
Click = ">7, <9"
kaleido = { version = "^0.0.2", optional = true }
plotly = { version = "^4.9.0", optional = true }
notebook = { version = "^6.0.3", optional = true }
ipywidgets = { version = "^7.5.1", optional = true }
pandas = { version = "^1.2.3", optional = true }
matplotlib = { version = "^3.4.0", optional = true }
PyQt5 = { version = "^5.15.4", optional = true }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
sphinx-autodoc-typehints = "^1.10.3"
pytest = "^6.2.1"
mypy = "^0.770"
coverage = "^5.1"
recommonmark = "^0.6.0"
pre-commit = "^2.7.1"
jupytext = "^1.6.0"
isort = "^5.6.1"
pytest-mock = "^3.5.1"
sphinx-markdown-tables = "^0.0.15"
rst2pdf = "^0.99"

[tool.poetry.scripts]
chipscopy-get-examples = "chipscopy._cli.example_delivery:main"
csutil = "chipscopy._cli._chipscopy:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Xilinx/chipscopy/issues"

[tool.poetry.extras]
core-addons = ["plotly", "kaleido", "matplotlib", "PyQt5", "pandas"]
jupyter = ["notebook", "ipywidgets"]

[tool.pytest.ini_options]
addopts = "--strict-markers --verbose"
markers = [
    "xvc_suite: Use for tests that need the XVC server setup to run",
    "board_suite: Use for tests that need a board to run"
]
testpaths = "tests"

[tool.black]
line-length = 100
target-version = ['py37']
exclude = '''chipscopy/tcf/.*$|docs/.*$'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
