# Copyright (C) 2021-2022, Xilinx, Inc.
# Copyright (C) 2022-2024, Advanced Micro Devices, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "chipscopy"
version = "2025.1.1752011002"
description = "Open-source project from Xilinx® that enables high-level control of Versal debug IP running in hardware"
authors = ["Xilinx ChipScope Team"]
maintainers = ["Xilinx ChipScope Team"]
license = "Apache-2.0 AND EPL-2.0"
repository = "https://github.com/Xilinx/chipscopy"
documentation = "https://xilinx.github.io/chipscopy/"
readme = "README.md"
include = ["LICENSE", "epl-v20.html"]

[tool.poetry.dependencies]
python = ">=3.8.3, <4.0"
requests = ">=2.0.0"
more-itertools = "^10.1"
typing_extensions = "^4.7"
loguru = "^0.7"
importlib_metadata = "^6.8"
rich = "^13.5"
Click = "^8.1"
antlr4-python3-runtime = "==4.13.1"
kaleido = [
    { platform = "win32", version = "==0.1.0.post1", optional = true },
    { platform = "linux", version = "==0.1.0", optional = true }
]
plotly = { version = "^5.16", optional = true }
notebook = { version = "^7.0", optional = true }
ipywidgets = { version = "^8.1", optional = true }
pandas = { version = ">=1.5", optional = true }
matplotlib = { version = "^3.7", optional = true }
PyQt5 = { version = "^5.15", optional = true }
ipympl = { version = "^0.9.3", optional = true }
pywinpty = { version = "<=2.0.13", markers = "sys_platform == 'win32' and python_version < '3.9'", optional = true }

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
coverage = "^7.3"
pytest-mock = "^3.11"
colorama = "^0.4"

[tool.poetry.group.docs.dependencies]
Sphinx = "==6.2.1"
sphinx-rtd-theme = ">=1.3.0"
sphinx-autodoc-typehints = "^1.10.3"
recommonmark = ">=0.6.0"
sphinx-markdown-tables = "==0.0.17"
rst2pdf = "^0.99"

[tool.poetry.group.linter.dependencies]
black = "^23.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4"
jupytext = "^1.15"

[tool.poetry.scripts]
chipscopy-get-examples = "chipscopy._cli.example_delivery:main"
csutil = "chipscopy._cli._chipscopy:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Xilinx/chipscopy/issues"

[tool.poetry.extras]
core-addons = ["plotly", "kaleido", "matplotlib", "PyQt5", "pandas", "ipympl"]
jupyter = ["notebook", "ipywidgets", "pywinpty"]

[tool.pytest.ini_options]
addopts = "--strict-markers --verbose"
markers = [
    "xvc_suite: Use for tests that need the XVC server setup to run",
    "board_suite: Use for tests that need a board to run",
    "tcf_record_suite: Tests that record hardware interactions to a file",
    "tcf_playback_suite: Tests that playback tcf recordings from existing recording files"
]
testpaths = "tests"

[tool.black]
line-length = 100
target-version = ['py39']
extend-exclude = '''chipscopy/tcf/.*$|docs/.*$|internal-examples/.*$|examples/.*$|tests/.*$'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
